[gd_scene load_steps=9 format=3]

[ext_resource type="PackedScene" uid="uid://bgus0ka15pe6r" path="res://MGF Scene/Setup/ButtonClose.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://b4fjy2aevfiwl" path="res://MGF Scene/Setup/ButtonBase.tscn" id="2"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIBGNBlack.tres" id="2_nbwhf"]
[ext_resource type="StyleBox" uid="uid://bugyfau5s5ky3" path="res://Assets2D/Theme/btnUIN.tres" id="4"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UI.tres" id="4_8u7ir"]
[ext_resource type="Script" path="res://MGF Scene/Setup/Messenger.gd" id="5"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRedN.tres" id="6"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRedP.tres" id="7"]

[node name="Messenger" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("5")

[node name="Popup" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackGround" type="Panel" parent="Popup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_nbwhf")

[node name="Panel" type="Panel" parent="Popup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -144.0
offset_right = 384.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -144.0
offset_right = 384.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 70
alignment = 1

[node name="Label" type="Label" parent="Popup/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8u7ir")
theme_override_font_sizes/font_size = 32
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Popup/Panel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8u7ir")
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 120
alignment = 1

[node name="BtnYes" parent="Popup/Panel/VBoxContainer/HBoxContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8u7ir")
theme_override_font_sizes/font_size = 30
text = "Yes"

[node name="BtnNo" parent="Popup/Panel/VBoxContainer/HBoxContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8u7ir")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("6")
theme_override_styles/hover = ExtResource("7")
theme_override_styles/pressed = ExtResource("7")
theme_override_styles/disabled = ExtResource("7")
theme_override_styles/focus = ExtResource("7")
text = "No"

[node name="ButtonClose" parent="Popup/Panel" instance=ExtResource("1")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 72.0
offset_bottom = 72.0

[connection signal="pressed" from="Popup/Panel/VBoxContainer/HBoxContainer/BtnYes" to="." method="_on_btn_yes_pressed"]
[connection signal="pressed" from="Popup/Panel/VBoxContainer/HBoxContainer/BtnNo" to="." method="_on_btn_no_pressed"]
[connection signal="pressed" from="Popup/Panel/ButtonClose" to="." method="_on_ButtonClose_pressed"]
